Align tiles to center; add fixed width to menu directive

--- a/app/common-components/directives/menu-directive/_menu-directive_styles.scss
+++ b/app/common-components/directives/menu-directive/_menu-directive_styles.scss
@@ -7,7 +7,7 @@ menu-directive
 		font-size: $mobile-menu-text;
 	}
 
-	flex: 1 0 0;
+	width: 300px;
 
 	font-size: $header-text;
 }
