--- a/app/common-styles/_base.scss
+++ b/app/common-styles/_base.scss
@@ -9,3 +9,8 @@ body
 {
 	overflow: hidden;
 }
+
+a
+{
+	color: $black;
+}
