--- a/app/states/root/section-state/_section-state_styles.scss
+++ b/app/states/root/section-state/_section-state_styles.scss
@@ -33,7 +33,7 @@
 .index-project-wrapper
 {
 	flex-flow: row wrap;
-	justify-content: flex-end;
+	justify-content: center;
 
 	padding-right: 2rem;
 }
@@ -76,7 +76,8 @@
 .alt-index-project-wrapper
 {
 	overflow-x: hidden;
-	margin: 0 2rem;
+	min-width: 100%;
+	padding: 0 4rem;
 
 	font-size: $little-sorting-option;
 }
@@ -88,9 +89,19 @@
 	// justify-content: space-between;
 	justify-content: center;
 
-	height: 150px;
+	overflow: visible;
+	position: relative;
+	min-height: 150px;
 	padding: 1rem 0;
 	border-bottom: 1px solid lighten($black, 90%);
+}
+
+.alt-index-expand
+{
+	position: absolute;
+	cursor: pointer;
+	top: 50px;
+	left: -30px;
 }
 
 .alt-project-title-and-image
@@ -138,6 +149,16 @@
 {
 	flex-flow: row nowrap;
 
+	cursor: pointer;
+	border-bottom: 3px solid $yellow;
+
+	line-height: 0.5rem;
+
+	&:hover
+	{
+		background-color: $yellow;
+	}
+
 	&:after
 	{
 		content: ',';
@@ -148,4 +169,14 @@
 	{
 		content: ' ';
 	}
+}
+
+.alt-title-and-expanded-wrapper
+{
+	max-width: 70%;
+}
+
+.alt-project-expanded
+{
+	max-width: 100%;
 }
