--- a/app/states/root/section-state/project-state/_project-state_styles.scss
+++ b/app/states/root/section-state/project-state/_project-state_styles.scss
@@ -246,6 +246,7 @@
 
 	width: 100px;
 	height: 100px;
+	margin-right: 0.5rem;
 	background-position: left center;
 	background-size: contain;
 	background-repeat: no-repeat;
